--- a/content/_index.Rmd
+++ b/content/_index.Rmd
@@ -6,9 +6,9 @@ summary: "EMCR Brain Sciences Website"
 
 # EMCR Brain Sciences
 
-### Backround - Who are we?
+### Background - Who are we?
 
-<img src="header/caladown.png" width="150px" style="float:right; padding:15px;">
+<img src="header/profile.png" width="150px" style="float:right; padding:15px;">
 
 <br>
 
