--- a/themes/hugo-calade/exampleSite/content/_index.Rmd
+++ b/themes/hugo-calade/exampleSite/content/_index.Rmd
@@ -8,11 +8,11 @@ summary: "EMCR Brain Sciences Website"
 
 ### Who are we? 
 
-<img src="header/caladown.png" width="150px" style="float:right; padding:15px;">
+<img src="header/EMCR-BSN-logo.png" width="150px" style="float:right; padding:15px;">
 
 <br>
 
-The goal of calade and caladown is to allow R users to create lightweight websites powered by Hugo and is designed to be compatible with both [hugodown](https://hugodown.r-lib.org/) and [blogdown](https://bookdown.org/yihui/blogdown/), and allows users to generate graphics that match the visual style of the site via the [thematic](https://rstudio.github.io/thematic/) package. There are two components to caladown, a [Hugo theme](https://github.com/djnavarro/hugo-calade) and an [R package](https://github.com/djnavarro/caladown). The simplest way to get started is simply to download the R package from GitHub using the following command:
+The Early- and Mid-Career Researcher (EMCR) Brain Science Network aims to establish a platform for early-to-mid career brain scientists to develop into future leaders and to drive Australian brain science forward.
 
 ```{r, eval=FALSE}
 remotes::install_github("djnavarro/caladown")
