--- a/content/newsletter/September-2019/index.Rmd
+++ b/content/newsletter/September-2019/index.Rmd
@@ -7,9 +7,9 @@ slug: september-newsletter
 tags: "newsletter"
 summary: "We are excited to bring you the spring issue of the ABA EMCR Network Newsletter, starting with an update on recent ABA EMCR Network activities. We have teamed up with the EMCR Forum of the Australian Academy of Science to tackle the issue of poor mental health faced by our EMCRs. We bring you our coverage of the ASMR Medical Research Week which took place in June, where brain scientists showcased and dazzled with their research findings all over Australia. We have for you their stories as told by the enthusiastic voices of the researchers themselves. We have the pleasure to introduce to you two interesting researchers: an EMCR who uniquely combines physiotherapy and neuroscience, and a PhD student whose work champions the link between architecture and emotions. Last but not least, we bring you a student's perspective on the 6th Australian EMBL PhD course."
 header:
-  caption: "A caption"
-  image: 'header/banner.png'
-  profile: 'header/profile.png'
+  caption: "Image source: https://www.researchpublishinginternational.com/"
+  image: 'header/brain-injury-banner.jpeg'
+  profile: ''
 ---
 
 ```{r setup, include=FALSE}
