Last of the profile content

--- a/content/newsletter/April-2019/index.Rmd
+++ b/content/newsletter/April-2019/index.Rmd
@@ -74,4 +74,12 @@ The showcase ended with a Q&A and networking opportunity which sparked discussio
 
 
 ## Grant Opportunities
+
 Please [contact](mailto:emcrbsn@brainalliance.org.au) the EMCR Network if you would like to advertise grant opportunities here.
+
+
+## Employment and other brain science opportunities
+
+Please [contact](mailto:emcrbsn@brainalliance.org.au) the EMCR Network if you would like to advertise positions here.
+
+[![Women in Brain Stim](WomeninBrainStim.png)](http://womeninbrainstim.com/)
