--- a/content/newsletter/June-2019/index.Rmd
+++ b/content/newsletter/June-2019/index.Rmd
@@ -70,9 +70,19 @@ The symposium concluded with a networking opportunity to discuss potential colla
 
 ## Brain Science EMCR profiles
 
+Today we're profiling two talented EMCR brain researchers, [A/Prof. Tara Hamilton](/profiles/a-prof-tara-hamilton) and [Dr. Kristi Griffiths](/profiles/dr-kristi-griffiths).
 
 
+## Grant Opportunities
 
+Please [contact](mailto:emcrbsn@brainalliance.org.au) the EMCR Network if you would like to advertise grant opportunities here.
+
+
+## Employment and other brain science opportunities
+
+Please [contact](mailto:emcrbsn@brainalliance.org.au) the EMCR Network if you would like to advertise positions here.
+
+[![Women in Brain Stim](WomeninBrainStim.png)](http://womeninbrainstim.com/)
 
 
 
