--- a/content/newsletter/September-2019/index.Rmd
+++ b/content/newsletter/September-2019/index.Rmd
@@ -120,7 +120,7 @@ My research explores how oligodendrocytes, the myelinating cells of the central 
 
 ## Brain science EMCR profiles
 
-This month we're profiling ...
+This week we're featuring profiles of two talented EMCR Brain scientists - [Dr. Brenton Hordacre](/profiles/dr-brenton-hordacre), and PhD student [Isabella Bower](/profiles/isabella-bower).
 
 ## 6th EMBL Australia PhD Course — student perspective
 
