--- a/docs/steeringcommittee/index.Rmd
+++ b/docs/steeringcommittee/index.Rmd
@@ -13,7 +13,7 @@ colorAccent2: "#8a2be2"
 toc: false
 header:
   caption: "Image source: UCSB Brain Initiative"
-  image: 'header/mri-banner.png'
+  image: 'header/mri-banner.jpeg'
   profile: ''
 ---
 
