--- a/content/events/Jobs-outside-the-bubble-2/index.Rmd
+++ b/content/events/Jobs-outside-the-bubble-2/index.Rmd
@@ -5,7 +5,7 @@ author: "Deborah Apthorp"
 date: "2021-08-11"
 slug: jobs-outside-the-bubble
 tags: "seminar"
-summary: "This will be the next in our very popular webinar series!"
+summary: "This will be the next in our very popular webinar series, to be held on September 14th from 1-2pm."
 header:
   caption: "Photo by [Kind and Curious](https://unsplash.com/@kindandcurious) on [Unsplash](https://unsplash.com)"
   image: 'header/bubbles.jpeg'
@@ -20,9 +20,20 @@ knitr::opts_chunk$set(collapse = TRUE)
 
 Please join us in conversation with two more outstanding brain scientists who have secured jobs outside of the university sector. How did they do it? What is it like outside the bubble?  Whether you’re thinking about making a move, or are mentoring someone in this position, this webinar is for you. This promises to be an engaging and informative webinar! Below is the link for registration. 
 
-Chaired by Dr Bernadette Fitzgibbon (Monash University) and A/Prof Hannah Keage (UniSA). More details soon! 
+### Speakers
 
- September 14th, 1-2pm (Melbourne/Sydney time)
+
+![**Melita Giummarra**](Melita.png)
+
+National Disability Insurance Agency 
+
+![**Sin-Ki Ng**](Sin-Ki.png)
+
+Victoria Police 
+
+Chaired by the Brain Science Network. 
+
+September 14th, 1-2pm (Melbourne/Sydney time)
 
 [Register here!](https://unisa.zoom.us/webinar/register/WN_lQyBifqRR0aYrxYLnluncA)
 
