--- a/docs/events/jobs-outside-the-bubble/index.Rmd
+++ b/docs/events/jobs-outside-the-bubble/index.Rmd
@@ -1,11 +1,11 @@
 ---
-title: "Jobs Outside the Bubble"
+title: "Jobs Outside the Bubble 2"
 type: "talk"
-author: "Phillip Ward and Olga Shimoni"
-date: "2021-07-22"
+author: "Deborah Apthorp"
+date: "2021-08-11"
 slug: jobs-outside-the-bubble
 tags: "seminar"
-summary: "Recently, many of you joined us in conversation with two outstanding brain scientists who have secured jobs outside of the university sector.  How did they do it? What is it like outside the bubble?"
+summary: "This will be the next in our very popular webinar series, to be held on September 14th from 1-2pm."
 header:
   caption: "Photo by [Kind and Curious](https://unsplash.com/@kindandcurious) on [Unsplash](https://unsplash.com)"
   image: 'header/bubbles.jpeg'
@@ -16,20 +16,28 @@ header:
 knitr::opts_chunk$set(collapse = TRUE)
 ```
 
-## Jobs Outside the Bubble 1 - the first in our seminar series
+## Jobs Outside the Bubble 2 - the second in our seminar series
 
-Recently, many of you joined us in conversation with two outstanding brain scientists who have secured jobs outside of the university sector.  How did they do it? What is it like outside the bubble?  Whether you’re thinking about making a move, or are mentoring someone in this position, this webinar is for you. This promised to be an engaging and informative webinar, and indeed it delivered! Below is the link where you can watch it if you missed it. 
+Please join us in conversation with two more outstanding brain scientists who have secured jobs outside of the university sector. How did they do it? What is it like outside the bubble?  Whether you’re thinking about making a move, or are mentoring someone in this position, this webinar is for you. This promises to be an engaging and informative webinar! Below is the link for registration. 
 
-Chaired by Dr Bernadette Fitzgibbon (Monash University) and A/Prof Hannah Keage (UniSA)
-
-22 July 2pm (Melbourne/Sydney time)
-
-[Jobs Outside the Bubble 1](https://unisa.au.panopto.com/Panopto/Pages/Viewer.aspx?id=fb0502c0-3348-4cfb-99a7-ad6d0053ade2)
-
-![Phillip Ward](Phil.png)
+### Speakers
 
 
-![Olga Shimoni](Olga.png)
+![**Melita Giummarra**](Melita.png)
+
+National Disability Insurance Agency 
+
+![**Sin-Ki Ng**](Sin-Ki.png)
+
+Victoria Police 
+
+Chaired by the Brain Science Network. 
+
+September 14th, 1-2pm (Melbourne/Sydney time)
+
+[Register here!](https://unisa.zoom.us/webinar/register/WN_lQyBifqRR0aYrxYLnluncA)
+
+
 
 
 
