--- a/content/events/Jobs-outside-the-bubble-2/index.Rmd
+++ b/content/events/Jobs-outside-the-bubble-2/index.Rmd
@@ -2,10 +2,10 @@
 title: "Jobs Outside the Bubble 2"
 type: "talk"
 author: "Deborah Apthorp"
-date: "2021-08-11"
+date: "2021-09-14"
 slug: jobs-outside-the-bubble
 tags: "seminar"
-summary: "This will be the next in our very popular webinar series, to be held on September 14th from 1-2pm."
+summary: "The second in our very popular webinar series, which was held on September 14th from 1-2pm."
 header:
   caption: "Photo by [Kind and Curious](https://unsplash.com/@kindandcurious) on [Unsplash](https://unsplash.com)"
   image: 'header/bubbles.jpeg'
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(collapse = TRUE)
 
 ## Jobs Outside the Bubble 2 - the second in our seminar series
 
-Please join us in conversation with two more outstanding brain scientists who have secured jobs outside of the university sector. How did they do it? What is it like outside the bubble?  Whether you’re thinking about making a move, or are mentoring someone in this position, this webinar is for you. This promises to be an engaging and informative webinar! Below is the link for registration. 
+Recently, some of you joined us in conversation with two more outstanding brain scientists who have secured jobs outside of the university sector. How did they do it? What is it like outside the bubble?  Whether you’re thinking about making a move, or are mentoring someone in this position, this webinar is for you. This was such an engaging and informative webinar! Below is the link for the YouTube video of the whole seminar. 
 
 ### Speakers
 
@@ -35,7 +35,7 @@ Chaired by the Brain Science Network.
 
 September 14th, 1-2pm (Melbourne/Sydney time)
 
-[Register here!](https://unisa.zoom.us/webinar/register/WN_lQyBifqRR0aYrxYLnluncA)
+`r htmltools::HTML("{{< youtube kphc87-hKgQ >}}")`
 
 
 
