--- a/content/events/Jobs-outside-the-bubble-1/index.Rmd
+++ b/content/events/Jobs-outside-the-bubble-1/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Jobs Outside the Bubble"
+title: "Jobs Outside the Bubble 1"
 type: "talk"
 author: "Phillip Ward and Olga Shimoni"
 date: "2021-07-22"
@@ -24,7 +24,8 @@ Chaired by Dr Bernadette Fitzgibbon (Monash University) and A/Prof Hannah Keage 
 
 22 July 2pm (Melbourne/Sydney time)
 
-[Jobs Outside the Bubble 1](https://unisa.au.panopto.com/Panopto/Pages/Viewer.aspx?id=fb0502c0-3348-4cfb-99a7-ad6d0053ade2)
+
+
 
 ![Phillip Ward](Phil.png)
 
@@ -32,6 +33,8 @@ Chaired by Dr Bernadette Fitzgibbon (Monash University) and A/Prof Hannah Keage 
 ![Olga Shimoni](Olga.png)
 
 
+
+`r htmltools::HTML("{{< youtube yWJ1KQJBE8Y>}}")`
 
 
 
