--- a/content/steeringcommittee/index.Rmd
+++ b/content/steeringcommittee/index.Rmd
@@ -12,7 +12,7 @@ colorAccent1: "#0000dd"
 colorAccent2: "#8a2be2"
 toc: false
 header:
-  image: 'header/brain-banner.png'
+  image: 'header/blue-brain-banner.png'
   profile: ''
 ---
 
