--- a/docs/events/jobs-outside-the-bubble/index.Rmd
+++ b/docs/events/jobs-outside-the-bubble/index.Rmd
@@ -1,11 +1,11 @@
 ---
-title: "Jobs Outside the Bubble 2"
+title: "Jobs Outside the Bubble 1"
 type: "talk"
-author: "Deborah Apthorp"
-date: "2021-08-11"
+author: "Phillip Ward and Olga Shimoni"
+date: "2021-07-22"
 slug: jobs-outside-the-bubble
 tags: "seminar"
-summary: "This will be the next in our very popular webinar series, to be held on September 14th from 1-2pm."
+summary: "Recently, many of you joined us in conversation with two outstanding brain scientists who have secured jobs outside of the university sector.  How did they do it? What is it like outside the bubble?"
 header:
   caption: "Photo by [Kind and Curious](https://unsplash.com/@kindandcurious) on [Unsplash](https://unsplash.com)"
   image: 'header/bubbles.jpeg'
@@ -16,30 +16,25 @@ header:
 knitr::opts_chunk$set(collapse = TRUE)
 ```
 
-## Jobs Outside the Bubble 2 - the second in our seminar series
+## Jobs Outside the Bubble 1 - the first in our seminar series
 
-Please join us in conversation with two more outstanding brain scientists who have secured jobs outside of the university sector. How did they do it? What is it like outside the bubble?  Whether you’re thinking about making a move, or are mentoring someone in this position, this webinar is for you. This promises to be an engaging and informative webinar! Below is the link for registration. 
+Recently, many of you joined us in conversation with two outstanding brain scientists who have secured jobs outside of the university sector.  How did they do it? What is it like outside the bubble?  Whether you’re thinking about making a move, or are mentoring someone in this position, this webinar is for you. This promised to be an engaging and informative webinar, and indeed it delivered! Below is the link where you can watch it if you missed it. 
 
-### Speakers
+Chaired by Dr Bernadette Fitzgibbon (Monash University) and A/Prof Hannah Keage (UniSA)
 
-
-![**Melita Giummarra**](Melita.png)
-
-National Disability Insurance Agency 
-
-![**Sin-Ki Ng**](Sin-Ki.png)
-
-Victoria Police 
-
-Chaired by the Brain Science Network. 
-
-September 14th, 1-2pm (Melbourne/Sydney time)
-
-[Register here!](https://unisa.zoom.us/webinar/register/WN_lQyBifqRR0aYrxYLnluncA)
+22 July 2pm (Melbourne/Sydney time)
 
 
 
 
+![Phillip Ward](Phil.png)
+
+
+![Olga Shimoni](Olga.png)
+
+
+
+`r htmltools::HTML("{{< youtube yWJ1KQJBE8Y>}}")`
 
 
 
