--- a/content/_index.Rmd
+++ b/content/_index.Rmd
@@ -30,11 +30,6 @@ If you have an interest in general EMCR issues, we encourage you to also become 
 
 To find out more about the EMCR Brain Science Network activities, follow [EMCRBrainAu](https://twitter.com/emcrbrainau) on Twitter or contact them directly at [emcrbsn@brainalliance.org.au](mailto:emcrbsn@brainalliance.org.au)
 
-## Twitter feed
+## YouTube Channel
 
-
-```{r echo = FALSE}
-htmltools::HTML("{{<a class="twitter-timeline" href="https://twitter.com/EMCRBrainAu?ref_src=twsrc%5Etfw">Tweets by EMCRBrainAu</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>}}")
-  
-```
-
+[Click here to subscribe to outr YouTube channel!](https://www.youtube.com/channel/UCu3yEGOyHUfRrJ7KZP3jahg)
