--- a/content/_index.Rmd
+++ b/content/_index.Rmd
@@ -28,7 +28,7 @@ If you have an interest in general EMCR issues, we encourage you to also become 
 
 ## Connect with the Network
 
-To find out more about the EMCR Brain Science Network activities, follow [EMCRBrainAu](https://twitter.com/emcrbrainau) on Twitter or contact them directly at [emcrbsn@brainalliance.org.au](mailto:emcrbsn@brainalliance.org.au)
+To find out more about the EMCR Brain Science Network activities, follow [EMCRBrainAu](https://twitter.com/emcrbrainau) on Twitter or contact them directly at [emcrbsn@brainalliance.org.au](mailto:emcrbsn@brainalliance.org.au).
 
 You can also subcribe to our newsletter [here](https://brainalliance.us19.list-manage.com/subscribe?u=23c38f0be78a8ad9f183170b0&id=64146be720)! 
 
