--- a/content/_index.Rmd
+++ b/content/_index.Rmd
@@ -34,4 +34,4 @@ You can also subcribe to our newsletter [here](https://brainalliance.us19.list-m
 
 ## YouTube Channel
 
-[Click here to subscribe to outr YouTube channel!](https://www.youtube.com/channel/UCu3yEGOyHUfRrJ7KZP3jahg)
+[Click here to subscribe to our YouTube channel!](https://www.youtube.com/channel/UCu3yEGOyHUfRrJ7KZP3jahg)
