--- a/docs/events/jobs-outside-the-bubble-3/index.Rmd
+++ b/docs/events/jobs-outside-the-bubble-3/index.Rmd
@@ -29,7 +29,7 @@ This promises to be an engaging and informative webinar.
 ![**Luke Schneider (Clinical psychologist)**](Luke.png)
 
 
-![**Patrick Goodbourn (firefighter**](Patrick.png)
+![**Patrick Goodbourn (firefighter)**](Patrick.png)
 
 
 Chaired by the Brain Science Network. 
