--- a/docs/events/jobs-outside-the-bubble-4/index.Rmd
+++ b/docs/events/jobs-outside-the-bubble-4/index.Rmd
@@ -7,7 +7,8 @@ slug: jobs-outside-the-bubble-4
 tags: "seminar"
 summary: "The fourth in our popular webinar series, which will be held on Friday, September 2nd 2022, from 1-2pm (Melbourne/Sydney time)."
 header:
-  image: 'header/bubbles_2.jpeg'
+  caption: ''
+  image: 'header/bubbles.jpeg'
   profile: ''
 ---
 
