Added YouTube for Jobs Outside the Bubble 3

--- a/content/events/Jobs-outside-the-bubble-3/index.Rmd
+++ b/content/events/Jobs-outside-the-bubble-3/index.Rmd
@@ -37,8 +37,7 @@ Chaired by the Brain Science Network.
 April 8th, 1-2pm (Melbourne/Sydney time)
 
 
-[Register here!](https://unisa.zoom.us/webinar/register/WN_o4VOjUZrSYG_7DJiQXk0tg)
-
+`r htmltools::HTML("{{< youtube JPZqAtQjS6Y >}}")`
 
 
 
