--- a/content/events/Jobs-outside-the-bubble-4/index.Rmd
+++ b/content/events/Jobs-outside-the-bubble-4/index.Rmd
@@ -2,7 +2,7 @@
 title: "Jobs Outside the Bubble 4"
 type: "talk"
 author: "Deborah Apthorp"
-date: "2022-08-09"
+date: "2022-09-02"
 slug: jobs-outside-the-bubble-4
 tags: "seminar"
 summary: "The fourth in our popular webinar series, which will be held on Friday, September 2nd 2022, from 1-2pm (Melbourne/Sydney time)."
@@ -18,11 +18,11 @@ knitr::opts_chunk$set(collapse = TRUE)
 
 ## Jobs Outside the Bubble 4 - the fourth in our seminar series
 
-Please join us in conversation with two outstanding brain scientists who have secured jobs outside of the university sector.
+Recently some of you joined us us in conversation with two outstanding brain scientists who have secured jobs outside of the university sector.
 
-How did they do it? What is it like outside the bubble? Whether you’re thinking about making a move, or are mentoring someone in this position, this webinar is for you.
+How did they do it? What is it like outside the bubble? Whether you’re thinking about making a move, or are mentoring someone in this position, this webinar series is for you.
 
-This promises to be an engaging and informative webinar. 
+For those of you who missed it, the YouTube recording is embedded below! 
 
 ### Speakers
 
@@ -37,8 +37,7 @@ Chaired by the [Brain Science Network](https://emcrbrainsciencenetwork.com.au/).
 
 Friday September 2nd, 1-2pm (Melbourne/Sydney time)
 
-
-[Register in advance for this webinar here](https://unisa.zoom.us/webinar/register/WN_MOoEfwI6TC-QLemw-jvngA)
+`r htmltools::HTML("{{< youtube Fhi19t58Bxk >}}")`
 
 
 
