--- a/docs/ecr-groups/index.Rmd
+++ b/docs/ecr-groups/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Other ECR groups"
+title: "Links to other ECR groups"
 type: "post"
 summary: "Other brain-related ECR groups in Australia - brief descriptions and links"
 author: ""
