--- a/docs/steeringcommittee/index.Rmd
+++ b/docs/steeringcommittee/index.Rmd
@@ -29,5 +29,5 @@ Dr Sharn Perry	| University of Tasmania	| [Sharn Perry](https://www.utas.edu.au/
 A/Prof Carolyn Semmler |	University of Adelaide |	[Carolyn Semmler](https://www.adelaide.edu.au/directory/carolyn.semmler)
 Dr Annabel Short | Telethon Kids Institute | [Annabel Short](mailto:annabel.short@telethonkids.org.au )
 Dr Elysia Sokolenko | Research Coordinator Discipline of Psychiatry; Lecturer Discipline of Anatomy and Pathology, Adelaide Medical School, The University of Adelaide | [Elysia Sokolenko](https://researchers.adelaide.edu.au/profile/elysia.sokolenko)
-Dr Heidi Walkden | Department of Veterans’ Affairs | [Heidi Walkden](mailto:h.walkden@outlook.com)
+Dr Heidi Walkden | Department of Veterans’ Affairs | [Heidi Walkden](https://www.linkedin.com/in/heidiwalkden/)
 
