Updated Committee info

--- a/content/profiles/isabellabower/index.Rmd
+++ b/content/profiles/isabellabower/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "PhD student profile: Isabella Bower"
+title: "Researcher profile: Isabella Bower"
 type: "project"
 author: "Isabella Bower"
 date: "2023-09-10"
